--- a/index.html
+++ b/index.html
@@ -7,45 +7,48 @@
     <title>AI Generator</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to my AI Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The poem will go here
-        <br />
-        The poem will go here
-      </div>
-    </main>
-    <footer>
-      <p>
-        This project was coded by
-        <a
-          href="https://www.linkedin.com/in/ellen-broere-bb025386/"
-          target="_blank"
-          ><strong>Ellen Broere</strong></a
-        >
-        <span class="footer-emoji">🧍🏽‍♀️ </span>
-        and is on
-        <a href="https://github.com/EBroere/eb-generator.git" target="_blank"
-          >GitHub</a
-        >
-        and hosted on
-        <a href="https://lucky-capybara-b3dec9.netlify.app/" target="_blank"
-          >Netlify</a
-        >.
-      </p>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>Welcome to my AI Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="poem">
+          The poem will go here
+          <br />
+          The poem will go here
+        </div>
+      </main>
+      <footer>
+        <p>
+          This project was coded by
+          <a
+            href="https://www.linkedin.com/in/ellen-broere-bb025386/"
+            target="_blank"
+            ><strong>Ellen Broere</strong></a
+          >
+          <span class="footer-emoji">🧍🏽‍♀️ </span>
+          and is on
+          <a href="https://github.com/EBroere/eb-generator.git" target="_blank"
+            >GitHub</a
+          >
+          and hosted on
+          <a href="https://lucky-capybara-b3dec9.netlify.app/" target="_blank"
+            >Netlify</a
+          >.
+        </p>
+      </footer>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
