--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
+
     <title>AI Generator</title>
   </head>
   <body>
@@ -12,7 +14,7 @@
         <h1>Welcome to my AI Generator</h1>
       </header>
       <main>
-        <form>
+        <form id="poem-generator-form">
           <input
             type="text"
             placeholder="Enter the topic of the poem"
@@ -23,11 +25,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
-          The poem will go here
-          <br />
-          The poem will go here
-        </div>
+        <div class="poem" id="poem"></div>
       </main>
       <footer>
         <p>
@@ -50,6 +48,6 @@
       </footer>
     </div>
 
-    <script src="src/index.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
