--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
-
     <title>AI Quotes Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Welcome to my AI Quotes Generator</h1>
+        <h1>AI Quotes Generator</h1>
       </header>
+
       <main>
-        <form id="quotes-generator-form">
-          <input
-            type="text"
-            placeholder="Enter the topic of the quotes"
-            autofocus
-            required
-            autocomplete="off"
-            class="instructions"
-            id="user-instructions"
-          />
-          <input type="submit" class="submit-button" />
-        </form>
-        <div class="quotes" id="quotes"></div>
+        <div class="form-container">
+          <form id="quotes-generator-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of the quotes"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <div class="hint">i.e: Happiness, Love or Wander</div>
+        </div>
+        <div class="quotes hidden" id="quotes"></div>
       </main>
       <footer>
         <p>
