--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             >GitHub</a
           >
           and hosted on
-          <a href="https://lucky-capybara-b3dec9.netlify.app/" target="_blank"
+          <a
+            href="https://shecodes-ai-quotes-generator.netlify.app/"
+            target="_blank"
             >Netlify</a
           >.
         </p>
