--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Swanky+and+Moo+Moo&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
     <title>AI Quotes Generator</title>
   </head>
@@ -34,7 +40,7 @@
       </main>
       <footer>
         <p>
-          This project was coded by
+          This project is coded by
           <a
             href="https://www.linkedin.com/in/ellen-broere-bb025386/"
             target="_blank"
